fix(css): prevent horizontal scrolling

--- a/css/rilut.css
+++ b/css/rilut.css
@@ -6,3 +6,9 @@
 }
 body{background-color: whitesmoke;}
 .card-action, .card-content{background-color: white;}
+
+/*prevent scrolling*/
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
